# Formula-1-RL

./: .gitignore  README.md  pyproject.toml
configs/experiments/: interlagos_mappo.yaml
src/f1rl/: __init__.py
src/f1rl/baselines/: __init__.py  heuristic.py
src/f1rl/cli/: __init__.py  evaluate.py  simulate.py  train.py
src/f1rl/config/: __init__.py  loader.py  schema.py
src/f1rl/envs/: __init__.py  car.py  dynamics.py  race.py  track.py
src/f1rl/rl/: __init__.py  buffer.py  mappo.py  networks.py
src/f1rl/utils/: __init__.py  io.py  logging.py
tests/: test_config.py  test_env.py  test_training.py
